--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/third-parties": "^14.2.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jspdf": "^3.0.4",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18.3.1",
