--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@next/third-parties": "^14.2.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
